2006-01-18  Carl Worth  <cworth@cworth.org>

	* src/cairo-image-surface.c: Change documentation to recommend
	cairo_paint rather than cairo_rectangle;cairo_fill for clearing a
	surface.
	
	* src/cairo-pdf.h:
	* src/cairo-pdf-surface.c: (cairo_pdf_surface_create_for_stream),
	(cairo_pdf_surface_create): Add documentation. Add a
	cairo_content_t argument to PDF surface constructors.
	
	* src/cairo-ps.h:
	* src/cairo-ps-surface.c: (cairo_ps_surface_create),
	(cairo_ps_surface_create_for_stream): Add documentation. Add a
	cairo_content_t argument to PS surface constructors.

	* test/multi-page.c: (main):
	* test/cairo-test.c: (create_ps_surface), (create_pdf_surface):
	Track changes in PS/PDF surface constructor API.

2006-01-18  Carl Worth  <cworth@cworth.org>

	* src/cairo.c: Fix documentation of cairo_arc which erroneously
	claimed M_PI radians == 90 degrees to correctly say that M_PI/2.0
	radians == 90 degrees. This closes bug #5649 (with thanks to
	kengruven@gmail.com).

2006-01-17  Carl Worth  <cworth@cworth.org>

	Big change to the test infrastructure and supporting
	internals. The goal now is to test both a COLOR_ALPHA and a COLOR
	content for each surface backend, (since the semantics are
	different and we probably need to support both in each backend.

	The PS/PDF backends don't allow a content to be passed in right
	now, so they fail against the rgb24 tests, but the trivial
	addition to the constructors will allow them to pass all tests
	with both content values.

	* src/cairoint.h:
	* src/cairo-image-surface.c:
	(_cairo_image_surface_create_with_content),
	(_cairo_image_surface_create_for_data_with_content),
	(_cairo_image_surface_create_similar): And new constructors
	(currently internal only) to create an image surface with a
	cairo_content_t rather than a cairo_format_t.
	
	* src/cairo-meta-surface-private.h:
	* src/cairo-meta-surface.c: (_cairo_meta_surface_create),
	(_cairo_meta_surface_create_similar): Add a cairo_content_t