@@ -1,5 +1,10 @@
 2006-01-18  Carl Worth  <cworth@cworth.org>
 
+	* src/cairo-pdf-surface.c: (cairo_pdf_surface_create_for_stream),
+	(cairo_pdf_surface_create): Fix compilation-breaking typo.
+
+2006-01-18  Carl Worth  <cworth@cworth.org>
+
 	* src/cairo-image-surface.c: Change documentation to recommend
 	cairo_paint rather than cairo_rectangle;cairo_fill for clearing a
 	surface.
